# waifu2x-ncnn-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TRAIN_MODELS.md  filesystem_utils.h  main.cpp  waifu2x.cpp  waifu2x_postproc.comp  waifu2x_preproc.comp  wic_image.h
.github/: FUNDING.yml
.github/workflows/: CI.yml  linux-x64-gpu-gcc.yml  macos-x64-gpu.yml  release.yml  windows-x64-gpu-vs2019.yml
models-cunet/: noise0_model.param  noise0_scale2.0x_model.param  noise1_scale2.0x_model.param  noise2_model.param
src/: CMakeLists.txt  FindWebP.cmake  deps_codec.cmake  deps_ncnn.cmake  dynamiclib.cpp  filesystem_utils.h  jpeg_image.h  main.cpp  png_image.h  waifu2x.cpp  waifu2x.h  waifu2x_postproc.comp  waifu2x_postproc_tta.comp  waifu2x_preproc.comp  waifu2x_preproc_tta.comp  webp_image.h  wic_image.h
